--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple JSON summarizer to extract the structure from a JSON object",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/AndrewTBurks/json-summary#readme",
   "devDependencies": {
+    "jest": "^24.7.1",
     "rollup": "^1.9.0"
   }
 }
