--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "json-summary",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A simple JSON summarizer to extract the structure from a JSON object",
-  "main": "index.js",
+  "main": "dist/json-summary-node.js",
+  "module": "index.js",
+  "browser": "dist/json-summary.js",
+  "browserMin": "dist/json-summary-min.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "prepublish": "npm test && rollup -c"
   },
   "repository": {
     "type": "git",
@@ -18,9 +22,13 @@
   "bugs": {
     "url": "https://github.com/AndrewTBurks/json-summary/issues"
   },
-  "homepage": "https://github.com/AndrewTBurks/json-summary#readme",
+  "homepage": "https://github.com/AndrewTBurks/json-summary",
   "devDependencies": {
     "jest": "^24.7.1",
-    "rollup": "^1.9.0"
+    "rollup": "^1.9.0",
+    "rollup-plugin-commonjs": "^9.3.4",
+    "rollup-plugin-node-resolve": "^4.2.1",
+    "rollup-plugin-resolve": "0.0.1-predev.1",
+    "rollup-plugin-terser": "^4.0.4"
   }
 }
