--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "json-summary",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "A simple JSON summarizer to extract the structure from a JSON object",
   "main": "dist/json-summary-node.js",
   "module": "index.js",
   "browser": "dist/json-summary.js",
-  "browserMin": "dist/json-summary-min.js",
+  "browserMin": "dist/json-summary.min.js",
   "scripts": {
     "test": "jest",
     "prepublish": "npm test && rollup -c"
