--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "browserMin": "dist/json-summary.min.js",
   "scripts": {
     "test": "jest",
-    "prepublish": "npm test && npm run build",
+    "prepublish": "npm run build && npm test",
     "build": "rollup -c && cp dist/json-summary.min.js docs/json-summary.min.js && cp summarizer.css docs/summarizer.css"
   },
   "repository": {
