--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "bugs": {
     "url": "https://github.com/AndrewTBurks/json-summary/issues"
   },
-  "homepage": "https://github.com/AndrewTBurks/json-summary",
+  "homepage": "https://andrewtburks.dev/json-summary",
   "devDependencies": {
     "jest": "^24.7.1",
     "rollup": "^1.9.0",
