--- a/package.json
+++ b/package.json
@@ -32,13 +32,14 @@
   "homepage": "https://andrewtburks.dev/json-summary",
   "devDependencies": {
     "coveralls": "^3.0.3",
+    "eslint": "^5.16.0",
     "jest": "^24.7.1",
     "rollup": "^1.9.0",
     "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-node-resolve": "^4.2.1",
-    "rollup-plugin-terser": "^4.0.4"
-  },
-  "dependencies": {
+    "rollup-plugin-terser": "^4.0.4",
     "sass": "^1.18.0"
-  }
+  },
+  "dependencies": {},
+  "eslintConfig": "./.eslintrc.json" 
 }
