work to support es6

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,8 +11,13 @@
         "SharedArrayBuffer": "readonly"
     },
     "parserOptions": {
-        "ecmaVersion": 2018
+        "ecmaVersion": 2018,
+        "sourceType": "module",
+        "ecmaFeatures": {
+            "impliedStrict": true
+        }
     },
     "rules": {
+        "semi": "error"
     }
 }
