--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "json-summary",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A simple JSON summarizer to extract the structure from a JSON object",
   "keywords": [
     "JSON",
@@ -40,10 +40,10 @@
     "@babel/core": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
     "babel-jest": "^24.7.1",
-    "babel-loader": "^8.0.5",
     "coveralls": "^3.0.3",
     "eslint": "^5.16.0",
     "jest": "^24.7.1",
+    "jsdom": "^15.0.0",
     "rollup": "^1.9.0",
     "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-node-resolve": "^4.2.1",
